Fix the bug that FIP box is misaligned on relaunching in slide over mode.

If the device's size class has changed from RegularXRegular to another or
reversely, the find bar should switch between regular mode and compact mode
accordingly. Hide and then reshow the findbar in BVC.traitCollectionDidChange
if the size class changed.

Bug: 883672
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I38872c3fd0911e0e99ffae87f51f90c0cf9082fb
Reviewed-on: https://chromium-review.googlesource.com/1256690
Commit-Queue: Yi Su <mrsuyi@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595819}
Former-commit-id: 92fdaae551a04d358aec5edbff75cf54f2a1cc30