ios/chrome/browser/ui/uikit_ui_util.h
@@ -205,16 +205,20 @@ bool IsCompactHeight();
 // Whether the |environment| has a compact vertical size class.
 bool IsCompactHeight(id<UITraitEnvironment> environment);
 
+// Whether toolbar should be shown in compact mode.
+bool ShouldShowCompactToolbar();
+// Whether toolbar should be shown in compact mode in |traitCollection|.
+bool ShouldShowCompactToolbar(UITraitCollection* traitCollection);
+
 // Whether the the main application window's rootViewController has a regular
 // vertical and regular horizontal size class.
 bool IsRegularXRegularSizeClass();
-
-// Whether toolbar should be shown in compact mode.
-bool ShouldShowCompactToolbar();
-
 // Whether the |environment| has a regular vertical and regular horizontal
-// size class. the main application window's rootViewController
+// size class.
 bool IsRegularXRegularSizeClass(id<UITraitEnvironment> environment);
+// Whether the |traitCollection| has a regular vertical and regular horizontal
+// size class.
+bool IsRegularXRegularSizeClass(UITraitCollection* traitCollection);
 
 // Returns whether the toolbar is split between top and bottom toolbar or if it
 // is displayed as only one toolbar.
